--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 	<section class="first-product">
 		<div class="name">
-			<label class="tomatoes">
+			<p contenteditable="false">
 				Tomatoes
-			</label>
+			</p>
 		</div>
 		<div class="quantity">
 			<button class="minus" data-tooltip="decrease">-</button>
@@ -32,9 +32,9 @@
 
 	<section class="second-product">
 	<div class="name">
-	<label class="cookies">
+	<p contenteditable="true">
 		Cookies
-	</label>
+	</p>
 	</div>
 	<div class="quantity">
 		<button class="minus" data-tooltip="decrease">-</button>
@@ -49,7 +49,7 @@
 
 	<form class="third-product">
 	<div class="name">
-		<input type="text" class="cheese" placeholder="Cheese"/>
+		<p contenteditable="true">Cheese<p/>
 	</div>
 	<div class="quantity">
 		<button class="minus" data-tooltip="decrease">-</button>
