--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 	</form>
 
 	<section class="first-product">
-		<div class="name">
-			<p contenteditable="false">
+		<div class="name" contenteditable="false">
+			<p>
 				Tomatoes
 			</p>
 		</div>
@@ -31,8 +31,8 @@
 	</section>
 
 	<section class="second-product">
-	<div class="name">
-	<p contenteditable="true">
+	<div class="name" contenteditable="true">
+	<p >
 		Cookies
 	</p>
 	</div>
@@ -48,8 +48,8 @@
 	</section>
 
 	<form class="third-product">
-	<div class="name">
-		<p contenteditable="true">Cheese<p/>
+	<div class="name" contenteditable="true">
+		<p >Cheese</p>
 	</div>
 	<div class="quantity">
 		<button class="minus" data-tooltip="decrease">-</button>
